bdr.BDR.scala.code
var finished:Int=0
var char=''
while (finished==0){
  if (char getIndication()=='R'){
    left();
    forward();
  }
  if (char getIndication()=='L'){
    right();
    forward();
  }
  if (char getIndication()=='I'){
    left();
    left();
    forward();
  }
  if (char getIndication()=='A'){
    forward();
  }
  finished=1
}